--- a/Lapis_Lazuli_Distribution.ipynb
+++ b/Lapis_Lazuli_Distribution.ipynb
@@ -34,7 +34,7 @@
         "\n",
         "This study used multiple finds for data in but this notebook will focus on the ditribution of the precious stone Lapis Lazuli.\n",
         "\n",
-        "Lapis Lazuli at this time was mapped in Afghanistan which is quite a distance away from the area in the study. It is traditionally thought to have been used by the elite of society and can indicate where centres of long-distance trade are.\n",
+        "Lapis Lazuli at this time was mined in Afghanistan which is quite a distance away from the area in the study. It is traditionally thought to have been used by the elite of society and can indicate where centres of long-distance trade are.\n",
         "\n",
         "While working through this notebook and noticing the changes think about what this can mean for the society in question with regards to trade, stratification and settlement patterns.\n",
         "\n"
