--- a/Lapis_Lazuli_Distribution.ipynb
+++ b/Lapis_Lazuli_Distribution.ipynb
@@ -811,7 +811,7 @@
       "source": [
         "# Questions to think about:\n",
         "\n",
-        "# 1. What does this tell us about the change in land use?\n",
+        "# 1. What does this tell us about the change in land use with respect to trade?\n",
         "# 2. Could this tell us about social stratification?\n",
         "# 3. What can this tell us about settlement patterns? Are there less people living in the region or is it a nucleation of sites?"
       ]
