--- a/Lapis_Lazuli_Distribution.ipynb
+++ b/Lapis_Lazuli_Distribution.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "The data set used in this notebook came from \"Massa M., Palmisano A. (2018), ‘Commercial Landscapes of Long-distance Contacts in Western Asia, C. 3200 – 1600 BC: Perspectives from Material Culture’, Journal of Open Archaeology Data, 6(1) p.3 DOI: http://doi.org/10.5334/joad.45 \" which was in the reading list for this case study.\n",
         "\n",
-        "This study used multiple finds for data in but this notebook will focus on the ditribution of the precious stone Lapis Lazuli.\n",
+        "This study used multiple finds for data in but this notebook will focus on the ditribution of the precious stone Lapis Lazuli and compare Early Bronze Age Distribution with Middle Bronze Age Distribution.\n",
         "\n",
         "Lapis Lazuli at this time was mined in Afghanistan which is quite a distance away from the area in the study. It is traditionally thought to have been used by the elite of society and can indicate where centres of long-distance trade are.\n",
         "\n",
